[package]
name = "sift"
version = "0.1.0"
authors = ["Brendan Knapp <brendan.knapp@nps.edu>"]
edition = "2018"
documentation = "https://github.com/knapply/sift"
homepage = "https://github.com/knapply/sift"
repository = "https://github.com/knapply/sift"
readme = "README.md"
keywords = ["json", "filter"]
description = """
sift filters (big) files.
"""

[badges]
travis-ci = { repository = "knapply/sift" }
appveyor = { repository = "knapply/sift" }

[dependencies]
flate2 = "1.0.13"
serde_json = "1.0.46"
simd-json = "0.2.2"
rayon = "1.1"

[lib]
name = "sift"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.8.4"
features = ["extension-module"]