[package]
name = "datapan"
version = "0.1.1"
authors = ["Brendan Knapp <brendan.knapp@nps.edu>"]
edition = "2018"
license = "GPL-3.0"
documentation = "https://github.com/knapply/datapan"
homepage = "https://github.com/knapply/datapan"
repository = "https://github.com/knapply/datapan"
readme = "README.md"
keywords = ["json", "filter"]
description = """
datapan filters (big) files.
"""

[badges]
travis-ci = { repository = "knapply/datapan" }
appveyor = { repository = "knapply/datapan" }

[dependencies]
flate2 = "1.0.13"
serde_json = "1.0.46"
simd-json = "0.2.2"
rayon = "1.1"

[lib]
name = "datapan"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.8.4"
features = ["extension-module"]
