[tool.poetry]
name = "sift"
version = "0.1.0"
authors = ["Brendan Knapp <brendan.knapp@nps.edu>"]
documentation = "https://github.com/knapply/sift"
homepage = "https://github.com/knapply/sift"
repository = "https://github.com/knapply/sift"
readme = "README.md"
keywords = ["json", "filter"]
description = """
sift filters (big) files.
"""

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^4.3"
pylint = "^1.9"
flake8 = "^3.5"
wheel = "*"
pytest-runner = "*"
pytest-benchmark = "*"
maturin = "==0.7.7"
setuptools = "*"
autopep8 = "*"
setuptools-rust = "^0.10.2"
