[tool.poetry]
name = "datapan"
version = "0.1.0"
authors = ["Brendan Knapp <brendan.g.knapp@gmail.com>"]
documentation = "https://github.com/knapply/datapan"
homepage = "https://github.com/knapply/datapan"
repository = "https://github.com/knapply/datapan"
license = "GPL-3.0"
readme = "README.md"
keywords = ["json", "filter"]
description = """
datapan filters (big) files.
"""
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^4.3"
pylint = "^1.9"
flake8 = "^3.5"
wheel = "*"
pytest-runner = "*"
pytest-benchmark = "*"
maturin = "==0.7.7"
setuptools = "*"
autopep8 = "*"
setuptools-rust = "^0.10.2"
